# rust-auth-service

./: Cargo.toml  README.md  docker-compose.yml
migrations/: 001_create_users.sql
src/: config.rs  crypto.rs  db.rs  jwt.rs  main.rs  models.rs  openapi.rs  redis.rs
src/middleware/: auth.rs  rate_limit.rs
src/route/: auth.rs  user.rs
