[package]
name = "rust-auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["serde", "v4"] }
dotenvy = "0.15"
argon2 = "0.5"
jsonwebtoken = "9"
chrono = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tower-governor = "0.4"
redis = { version = "0.24", features = ["tokio-comp"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = "4"
tracing = "0.1"
tracing-subscriber = "0.3"
